<resources>
  <string name="app_name">CleanArchitectureWithStrategy</string>
  <string name="sign_in">Sign In</string>
  <string name="enter_your_email_or_phone">Enter your email or phone</string>
  <string name="enter_your_password">Enter your password</string>
  <string name="forgot_your_password">Forgot your password?</string>
  <string name="trying_establish_connection">Trying to establish connection</string>
  <string name="error_response">Error retrieving data from the server.</string>
  <string name="enter_your_email">Enter your email</string>
  <string name="incorrect_email">Incorrect email</string>
  <string name="password_length">Password must be at least 6 characters</string>
  <string name="enter_old_password">Enter old password</string>
  <string name="enter_new_password">Enter new password</string>
  <string name="repeat_new_password">Repeat new password</string>
  <string name="passwords_do_not_match">Passwords do not match</string>
  <string name="password_6_characters">Password 6 characters</string>
  <string name="enter_phone_number">Enter phone number</string>
  <string name="please_sign_in">Please sign in</string>
  <string name="enter_valid_email_address">Enter a valid email address</string>
  <string name="enter_valid_password">Enter a valid password</string>
  <string name="sign_up">Sign Up</string>
  <string name="skip">Skip</string>
  <string name="password_is_not_the_same">Password is not the same</string>
  <string name="choose_yourself_name">Choose yourself name</string>
  <string name="already_have_an_account_ask">Already have an account?</string>
  <string name="email">Email</string>
  <string name="name">Name</string>
  <string name="phone_number">Phone Number</string>
  <string name="password">Password</string>
  <string name="confirm_password">Confirm Password</string>
  <string name="message_error">MessageError:</string>
  <string name="press_forgot_password">Press button Forgot Password</string>
  <string name="updated">Updated</string>
  <string name="main_activity">MainActivity</string>
  <string name="yellow_gears_digital_agency">Yellow Gears Digital Agency</string>
  <string name="please_login">Please log in</string>
</resources>
