<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true"
  android:orientation="vertical">

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
      android:layout_width="110dp"
      android:layout_height="110dp"
      android:layout_marginTop="20dp"
      android:layout_gravity="center"
      android:src="@mipmap/ic_logo" />

    <TextView
      android:id="@+id/tvSignIn"
      android:textStyle="bold"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:gravity="center"
      android:text="@string/sign_in"
      android:textColor="@color/deep_purple"
      android:textSize="24sp" />

    <TextView
      android:id="@+id/tvEmailValid"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="4dp"
      android:layout_marginStart="@dimen/marginStart"
      android:layout_marginEnd="@dimen/marginEnd"
      android:textColor="@android:color/holo_red_dark"
      android:textSize="12sp" />

    <EditText
      android:id="@+id/etEmailSignIn"
      style="@style/MyEditText"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:layout_marginStart="@dimen/marginStart"
      android:layout_marginEnd="@dimen/marginEnd"
      android:paddingStart="20dp"
      android:paddingEnd="20dp"
      android:textColor="@color/deep_purple"
      android:hint="@string/enter_your_email_or_phone"
      android:inputType="textEmailAddress"
      android:textSize="16sp" />

    <TextView
      android:id="@+id/tvPasswordValid"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:layout_marginBottom="5dp"
      android:layout_marginStart="@dimen/marginStart"
      android:layout_marginEnd="@dimen/marginEnd"
      android:textColor="@android:color/holo_red_dark"
      android:textSize="12sp" />

    <EditText
      android:id="@+id/etPasswordSignIn"
      style="@style/MyEditText"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:layout_marginStart="@dimen/marginStart"
      android:layout_marginEnd="@dimen/marginEnd"
      android:paddingStart="20dp"
      android:paddingEnd="20dp"
      android:textColor="@color/deep_purple"
      android:hint="@string/enter_your_password"
      android:inputType="textPassword"
      android:textSize="16sp" />

    <Button
      android:id="@+id/btnSignIn"
      android:textStyle="bold"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:layout_marginTop="30dp"
      android:layout_marginStart="@dimen/marginStart"
      android:layout_marginEnd="@dimen/marginEnd"
      android:background="@drawable/background_button"
      android:gravity="center"
      android:text="@string/sign_in"
      android:textAllCaps="false"
      android:textColor="@color/deep_purple"
      android:textSize="18sp" />

    <Button
      android:id="@+id/btnSkip"
      android:textStyle="bold"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:layout_marginTop="20dp"
      android:layout_marginStart="@dimen/marginStart"
      android:layout_marginEnd="@dimen/marginEnd"
      android:background="@drawable/background_button"
      android:gravity="center"
      android:text="@string/skip"
      android:textAllCaps="false"
      android:textColor="@color/deep_purple"
      android:textSize="18sp" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="60dp"
      android:layout_marginBottom="30dp"
      android:orientation="horizontal">

      <Button
        android:id="@+id/btnForgotPassword"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background_button"
        android:gravity="center"
        android:text="@string/forgot_your_password"
        android:textAllCaps="false"
        android:textColor="@color/deep_purple"
        android:textSize="14sp" />

      <Button
        android:id="@+id/btnSignUp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:layout_marginEnd="@dimen/marginEnd"
        android:background="@drawable/background_button"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/deep_purple"
        android:textSize="14sp" />

    </LinearLayout>
  </LinearLayout>
</ScrollView>